# TestPython3API

./: CMakeLists.txt  README.md  testBase.cpp  testMat.cpp
build_qt/: .ninja_deps  .ninja_log  CMakeCache.txt  TestPython3API.cbp  build.ninja  cmake_install.cmake  rules.ninja
include/: conversion.h
scripts/: testClass.py  testFunction.py  testFunction2.py  testMat.py
src/: conversion.cpp
